# PyMoL_Assistant

./: .gitignore  1a8o.cif  6axk.cif  README.md  pyproject.toml
pymol-assistant/: .gitignore  README.md  pyproject.toml
pymol-assistant/prep/data/: pymol_commands_wiki_2.csv
pymol-assistant/prep/notebooks/: check_qdrant.ipynb  compute_embeddings.ipynb  test_langgraph_agents.ipynb  test_rag.ipynb
pymol-assistant/pymol_assistant/: pymol_run.py  server.py
pymol-assistant/src/: logger.py  models.py  prompts.py  pymol_run.py  server.py  server_lg.py
pymol-assistant/src/dag/: llm.py  nodes.py  states.py  tools.py  workflow.py
pymol-assistant/src/db/: config.yaml  create_db.py  vector_store.py
pymolassistant/: README.md  models.py  prompts.py  pymol_run.py  server.py
pymolassistant/dag/: llm.py  nodes.py  states.py  tools.py  workflow.py
pymolassistant/db/: create_db.py
pymolassistant/prep/: extract.py
pymolassistant/prep/data/: pymol_commands_api.csv  pymol_commands_wiki_1.csv
pymolassistant/prep/notebooks/: check_qdrant.ipynb  compute_embeddings.ipynb  test_langgraph_agents.ipynb  test_rag.ipynb
