[tool.poetry]
name = "pymolassistant"
version = "0.1.0"
description = ""
authors = ["Adrià Cabello <adrian.cabello@alumni.esci.upf.edu>"]
readme = "README.md"
packages = [{include = "pymolassistant"}]

[tool.poetry.dependencies]
python = "^3.11.6"
fastapi = {extras = ["standard"], version = "^0.115.3"}
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"
qdrant-client = "^1.12.0"
tqdm = "^4.66.5"
langchain = "^0.3.4"
langchain-community = "^0.3.3"
openai = "^1.52.1"
langchain-qdrant = "^0.1.4"
langchain-openai = "^0.2.3"
langchain-cohere = "^0.3.1"
langgraph = "^0.2.39"
graphviz = "^0.20.3"
langchain-anthropic = "^0.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"