[tool.poetry]
name = "pymol-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
fastapi = {extras = ["standard"], version = "^0.115.3"}
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
